docs: 신뢰하는 유저 요청 swagger api 이동
