# server/swagger.yaml
@@ -112,18 +112,6 @@ components:
         dateOfDeath:
           type: string
           example: "2022-07-20"
-    TrustedUserInfo:
-      type: object
-      required:
-      - email
-      - currentPassword
-      properties:
-        email:
-          type: string
-          example: "example@email.com"
-        currentPassword:
-          type: string
-          example: '12345678'
     WillPost:
       type: object
       required:
@@ -730,13 +718,54 @@ paths:
         201:
           description: 사진 삭제 성공
           $ref: "#/components/responses/resultRes"
+  /api/auth/{userId}/trustedUser:
+    patch:
+      tags:
+      - Auth
+      security:
+      - bearerAuth: []
+      summary: 신뢰하는 유저 등록 요청
+      description: 자신의 사망 처리를 맡길(신뢰하는) 유저 등록, 수락 요청 이메일 전송.
+      parameters:
+      - $ref: "#/components/parameters/userIdParam"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+              - email
+              - currentPassword
+              properties:
+                email:
+                  $ref: "#/components/schemas/User/properties/email"
+                currentPassword:
+                  $ref: "#/components/schemas/User/properties/password"
+      responses:
+        200:
+          description: 신뢰하는 유저 등록 요청 성공
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  updatedUserInfo:
+                    $ref: "#/components/responses/userRes"
+                    description: '요청한(현재 로그인된) 유저의 정보'
+                  token:
+                    type: string
+                    description: '요청한 유저와 요청 받은 유저의 정보가 담긴 토큰'
+                  isUpdated:
+                    type: boolean
+                    description: '신뢰하는 유저를 변경하는지 여부'
   /api/auth/{userId}/confirmation:
     patch:
       tags:
       - Auth
       security:
       - bearerAuth: []
-      summary: 로그인 유저가 자신을 신뢰하는 유저로 등록하는 것을 수락
+      summary: 신뢰하는 유저 등록 수락
       description: 유저 로그인 시 신뢰하는 유저 등록을 수락하는 것으로 간주. 로그인한 유저의 managedUser에 요청 유저 정보 저장, 요청 유저의 trusedUser에 로그인한 유저 정보 저장
       parameters:
       - $ref: "#/components/parameters/userIdParam"
